layout problem solved

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -99,6 +99,10 @@
       padding-bottom: 80px;
     }
 
+    .top-padding{
+      padding-top: 7rem;
+    }
+
     .footer-padding {
       padding-top: 50px;
       padding-bottom: 50px;
@@ -108,9 +112,6 @@
       height: 70%;
     }
 
-    .remove-padding {
-      padding-right: 0px !important;
-    }
     .logo-text-position{
       position: relative;
     }
@@ -178,13 +179,13 @@
       background-position: center top, left bottom;
       background-repeat: no-repeat;
       position: relative;
-      background-size: 40% 50%, 50% 80%;
+      background-size: 18rem 18rem, 25rem 25rem;
     }
 
     .location-text{
-      position: absolute;
-      left: 6rem;
-      top: 5rem;
+      position: relative;
+      left: 4.5rem;
+      top: -7rem;
     }
 
     .numbers-size{
